[package]
name = "webview-sys"
version = "0.1.0"
authors = ["buckle2000 <buckle2000@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]

[build-dependencies]
bindgen = "0.53.2"
cc = "1.0.53"
pkg-config = "0.3.17"
